added buttons and new music section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Stage Fright</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="padding-top: 1em; padding-bottom: 1em;">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="images/stage_fright.png" alt="logo" width="70" height="70">
@@ -46,14 +46,20 @@
             </div>
         </nav>
 
-        <div class="containter-fluid title-container d-flex justify-content-center" style="padding: 0; min-width: 100%;">
-            <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img" style="padding: 3em;">
+
+        <div class="containter-fluid title-container d-flex justify-content-center">
+            <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img">
         </div>
-        <div class="containter-fluid album-container d-flex justify-content-center" style="padding: 0; min-width: 100%;">
-            <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img " style="padding: 3em;">
-            <div class="align-self-center GBNF-text">
+
+        <div class="containter-fluid album-container">
+            <div class="row justify-content-center bg-dark rows">
+                <h1>New Music</h1>
+            </div>
+            <div class="row justify-content-center rows">
+                <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img ">
+                <div class="align-self-center GBNF-text">
                 <h1>Gone But <br> Not Forgotten <br></h1>
-                <h5><br>stream now</h5>
+                <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
             </div>
         </div>
 
