--- a/index.html
+++ b/index.html
@@ -51,16 +51,14 @@
             <img src="images/stage_fright.png" alt="logo" class="img-fluid logo-img">
         </div>
 
-        <div class="containter-fluid album-container">
-            <div class="row justify-content-center bg-dark rows">
-                <h1>New Music</h1>
-            </div>
-            <div class="row justify-content-center rows">
-                <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img ">
-                <div class="align-self-center GBNF-text">
-                <h1>Gone But <br> Not Forgotten <br></h1>
-                <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
-            </div>
+        <div class="bg-dark d-flex container containter-fluid new-music-container justify-content-center align-items-center">
+            <h1>New Music</h1>
+        </div>
+        <div class="bg-image d-flex container container-fluid GBNF-container justify-content-center align-items-center">
+            <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img">
+            <div class="GBNF-text">
+            <h1>Gone But <br> Not Forgotten <br></h1>
+            <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
         </div>
 
         <script src="js/bootstrap.bundle.js"></script>
