--- a/index.html
+++ b/index.html
@@ -23,24 +23,60 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-main">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/music.html">Music</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="pages/store.html">Store</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Store
+                            </a>
+                            <ul class="dropdown-menu store-menu">
+                              <li class="nav-item">
+                                <a class="nav-link" href="pages/store.html">Storefront</a>
+                              </li>
+                              <li class="sub-menu">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  Collections
+                                </a>
+                                <ul class="dropdown-menu store-menu">
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                                </ul>
+                              </li>
+                              <li class="sub-menu">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> 
+                                  Categories
+                                </a>
+                                <ul class="dropdown-menu store-menu">
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
+                                </ul>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="pages/Store_Subpages/all.html">All</a>
+                              </li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="pages/tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/checkout.html">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                              <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                              </svg>
-                            </a>
-                        </li>
+                          <a class="nav-link" href="pages/checkout.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                            </svg>
+                          </a>
+                      </li>
                     </ul>
                 </div>
             </div>
