--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -28,19 +28,55 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../../music.html">Music</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="../../store.html">Store</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                              Store
+                            </a>
+                            <ul class="dropdown-menu store-menu">
+                              <li class="nav-item">
+                                <a class="nav-link" href="../../store.html">Storefront</a>
+                              </li>
+                              <li class="sub-menu">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                  Collections
+                                </a>
+                                <ul class="dropdown-menu store-menu">
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                                </ul>
+                              </li>
+                              <li class="sub-menu">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                  Categories
+                                </a>
+                                <ul class="dropdown-menu store-menu">
+                                  <li><a class="dropdown-item" href="tops.html">Tops</a></li>
+                                  <li><a class="dropdown-item" href="hats.html">Hats</a></li>
+                                  <li><a class="dropdown-item" href="other.html">Accessories</a></li>
+                                  <li><a class="dropdown-item" href="posters.html">Posters</a></li>
+                                  <li><a class="dropdown-item active" href="#">Albums</a></li>
+                                  <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
+                                </ul>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="../all.html">All</a>
+                              </li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../../tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../checkout.html">
-                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                              <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                              </svg>
-                            </a>
-                        </li>
+                          <a class="nav-link" href="../../checkout.html">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                            </svg>
+                          </a>
+                      </li>
                     </ul>
                 </div>
             </div>
@@ -48,47 +84,6 @@
 
         <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
             <h1>Store: Albums</h1>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#">Sections</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Collections
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
-                            <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
-                            <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
-                            <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                            <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
-                            <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Categories
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="tops.html">Tops</a></li>
-                          <li><a class="dropdown-item" href="hats.html">Hats</a></li>
-                          <li><a class="dropdown-item" href="other.html">Accessories</a></li>
-                          <li><a class="dropdown-item" href="posters.html">Posters</a></li>
-                          <li><a class="dropdown-item active" href="#">Albums</a></li>
-                          <li><a class="dropdown-item" href="tickets.html">Tickets</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="../all.html">All</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
         </div>
 
         <div class="row">
