--- a/pages/store.html
+++ b/pages/store.html
@@ -30,8 +30,44 @@
                     <li class="nav-item">
                         <a class="nav-link" href="music.html">Music</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Store</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Store
+                        </a>
+                        <ul class="dropdown-menu store-menu">
+                          <li class="nav-item">
+                            <a class="nav-link active" href="store.html">Storefront</a>
+                          </li>
+                          <li class="sub-menu">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                              Collections
+                            </a>
+                            <ul class="dropdown-menu store-menu">
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                            </ul>
+                          </li>
+                          <li class="sub-menu">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                              Categories
+                            </a>
+                            <ul class="dropdown-menu store-menu">
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
+                            </ul>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="Store_Subpages/all.html">All</a>
+                          </li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="tour.html">Tour</a>
@@ -50,47 +86,6 @@
 
     <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
       <h1>Store</h1>
-      <nav class="navbar navbar-expand-lg bg-body-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Sections</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Collections
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Categories
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tops.html">Tops</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/hats.html">Hats</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/other.html">Accessories</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/posters.html">Posters</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/albums.html">Albums</a></li>
-                  <li><a class="dropdown-item" href="Store_Subpages/Categories_Pages/tickets.html">Tickets</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Store_Subpages/all.html">All</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
     </div>
 
       <div class="container-fluid">
