--- a/index.html
+++ b/index.html
@@ -90,11 +90,13 @@
         <div class="bg-dark d-flex container containter-fluid new-music-container justify-content-center align-items-center">
             <h1>New Music</h1>
         </div>
+
         <div class="bg-image d-flex container container-fluid GBNF-container justify-content-center align-items-center">
             <img src="images/GBNF-album.png" alt="GBNF" class="img-fluid GBNF-img">
             <div class="GBNF-text">
             <h1>Gone But <br> Not Forgotten <br></h1>
             <a href="pages/music.html" class="btn btn-primary GBNF-button">Information</a>
+            </div>
         </div>
 
         <script src="js/bootstrap.bundle.js"></script>
