Added Page Header Logos

--- a/pages/Store_Subpages/Collections_Pages/col4.html
+++ b/pages/Store_Subpages/Collections_Pages/col4.html
@@ -82,8 +82,8 @@
         </div>
     </nav>
 
-        <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-            <h1>Store: Carnival of Insanity Collection</h1>
+        <div class="containter-fluid title-container d-flex justify-content-center">
+          <img src="../../../images/store.png" alt="logo" class="img-fluid logo-img">
         </div>
 
         <div class="row">
