--- a/pages/store.html
+++ b/pages/store.html
@@ -84,9 +84,9 @@
         </div>
     </nav>
 
-    <div class="container-fluid head-container" style="padding: 50px; min-width: 100%;">
-      <h1>Store</h1>
-    </div>
+      <div class="containter-fluid title-container d-flex justify-content-center">
+        <img src="../images/store.png" alt="logo" class="img-fluid logo-img">
+      </div>
 
       <div class="container-fluid">
 
