--- a/pages/music.html
+++ b/pages/music.html
@@ -83,6 +83,10 @@
             </div>
         </nav>
 
+        <div class="containter-fluid title-container d-flex justify-content-center">
+          <img src="../images/music.png" alt="logo" class="img-fluid logo-img">
+        </div>
+
         <script src="js/bootstrap.bundle.js"></script>
     </body>
 </html>
