--- a/pages/tour.html
+++ b/pages/tour.html
@@ -80,6 +80,10 @@
             </div>
         </nav>
 
+        <div class="containter-fluid title-container d-flex justify-content-center">
+          <img src="../images/tour.png" alt="logo" class="img-fluid logo-img">
+        </div>
+
         <div class="container-md overflow-hidden text-center">
             <h1 class="border border-5 border-dark"> Stage Fright is on Tour </h1>
 
