--- a/pages/tour.html
+++ b/pages/tour.html
@@ -27,7 +27,7 @@
                             <a class="nav-link" href="music.html">Music</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link active dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                               Store
                             </a>
                             <ul class="dropdown-menu store-menu">
@@ -66,7 +66,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tour.html">Tour</a>
+                            <a class="nav-link active" href="tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="checkout.html">
