--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="music.html">Music</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
                               Store
                             </a>
                             <ul class="dropdown-menu store-menu">
@@ -39,7 +39,7 @@
                                 <a class="nav-link" href="store.html">Storefront</a>
                               </li>
                               <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                   Collections
                                 </a>
                                 <ul class="dropdown-menu store-menu">
@@ -52,7 +52,7 @@
                                 </ul>
                               </li>
                               <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                   Categories
                                 </a>
                                 <ul class="dropdown-menu store-menu">
