--- a/pages/music.html
+++ b/pages/music.html
@@ -30,7 +30,7 @@
                             <a class="nav-link active" href="music.html">Music</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
                               Store
                             </a>
                             <ul class="dropdown-menu store-menu">
@@ -38,7 +38,7 @@
                                 <a class="nav-link" href="store.html">Storefront</a>
                               </li>
                               <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                   Collections
                                 </a>
                                 <ul class="dropdown-menu store-menu">
@@ -51,7 +51,7 @@
                                 </ul>
                               </li>
                               <li class="sub-menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
                                   Categories
                                 </a>
                                 <ul class="dropdown-menu store-menu">
