--- a/pages/music.html
+++ b/pages/music.html
@@ -26,7 +26,7 @@
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="music.html">Music</a>
+                        <a class="nav-link" href="#">Music</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
