added spaces in between cards

--- a/pages/music.html
+++ b/pages/music.html
@@ -88,7 +88,7 @@
 
          <!--Cards-->
 
-         <div class="card mb-3 m-3" style="max-width: 1920px">
+         <div id="customThing" class="card mb-3 p-1">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="../images/GbNF.png" class="img-fluid rounded-start" alt="...">
@@ -96,69 +96,75 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
-                <p class="card-text">Check out our slay album.</p>
+                <p class="card-text">Here is our most recent album!</p>
               </div>
             </div>
           </div>
         </div>
       
-        <div class="row row-cols-1 row-cols-md-3 g-4 p-2 m-2">
-          <div class="col">
-            <div class="card h-100 p-2">
+        <div class="row row-cols-1 row-cols-md-3 g-4 p-2 m-2 ">
+          <div class="col my-3">
+            <div class="card h-100 p-2 ">
               <img src="../images/vp.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Venomous Predator</h5>
                 <p class="card-text">This is the first album.</p>
+                <a href="../pages/Store_Subpages/Collections_Pages/col1.html" class="btn btn-primary">Album Merchandise</a>
               </div>
             </div>
           </div>
 
-          <div class="col">
+          <div class="col my-3">
             <div class="card h-100 p-2">
               <img src="../images/oal.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">On a Ledge</h5>
                 <p class="card-text">This is the second album.</p>
+                <a href="../pages/Store_Subpages/Collections_Pages/col2.html" class="btn btn-primary">Album Merchandise</a>
               </div>
             </div>
           </div>
 
-          <div class="col">
+          <div class="col my-3">
             <div class="card h-100 p-2">
               <img src="../images/la.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Locked Away</h5>
                 <p class="card-text">This is the third album.</p>
+                <a href="../pages/Store_Subpages/Collections_Pages/col3.html" class="btn btn-primary">Album Merchandise</a>
               </div>
             </div>
           </div>
 
-          <div class="col">
+          <div class="col my-3">
             <div class="card h-100 p-2">
               <img src="../images/CoI.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Carnival of Insanity</h5>
                 <p class="card-text">This is the fourth album.</p>
+                <a href="../pages/Store_Subpages/Collections_Pages/col4.html" class="btn btn-primary">Album Merchandise</a>
               </div>
             </div>
           </div>
 
-          <div class="col">
+          <div class="col my-3">
               <div class="card h-100 p-2">
                 <img src="../images/dol.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Devoid of Light</h5>
                   <p class="card-text">This is the fifth album.</p>
+                  <a href="../pages/Store_Subpages/Collections_Pages/col5.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
             </div>
 
-            <div class="col">
+            <div class="col my-3">
               <div class="card h-100 p-2">
                 <img src="../images/gbnf.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Gone But Not Forgotten</h5>
                   <p class="card-text">This is the sixth and our most recent album.</p>
+                  <a href="../pages/Store_Subpages/Collections_Pages/col6.html" class="btn btn-primary">Album Merchandise</a>
                 </div>
               </div>
             </div>
