working on tour

--- a/pages/tour.html
+++ b/pages/tour.html
@@ -85,18 +85,40 @@
 
             <div class="row">
                 <div class="col-md p-3 border border-dark h3"> Tickets avalible for 
-                    the ____ tour now! Picture under
+                    the Screamfest tour now! Picture under
                 </div>
             </div>
-
+          
             <div class="row gx-5">
                 <div class="col">
-                   <div class="p-3 border border-dark">Phoenix, Dallas, Seattle</div>
+                   <div class="p-3 border border-dark"> <a href="Tour_Subpages/phoenix.html"><h5>Phoenix</h5></a> <br>
+                  Come see Stage Fright perform their album Venomous Predator. Click for more info.</div>
                 </div>
                 <div class="col">
-                    <div class="p-3 border border-dark"> Detroit, Nashville, Charleston</div>
+                    <div class="p-3 border border-dark"> <a href="Tour_Subpages/detroit.html"><h5>Detroit</h5></a> <br>
+                  Come and listen as Stage Fright sings their album On a Ledge.</div>
                 </div>
-            </div>            
+            </div>
+            <div class="row gx-5">
+              <div class="col">
+                 <div class="p-3 border border-dark"><a href="Tour_Subpages/dallas.html"><h5>Dallas</h5></a> <br> 
+                  Come and listen as Stage Fright sings their album Locker Away.</div>
+              </div>
+              <div class="col">
+                  <div class="p-3 border border-dark"><a href="Tour_Subpages/nashville.html"><h5>Nashville</h5></a> <br> 
+                    Come and listen as Stage Fright sings their album Carnival of Insanity.</div>
+              </div>
+            </div>
+            <div class="row gx-5">
+              <div class="col">
+                <div class="p-3 border border-dark"><a href="Tour_Subpages/seattle.html"><h5>Seattle</h5></a> <br> 
+                  Come and listen as Stage Fright sings their album Devoid of Light.</div>
+            </div>
+            <div class="col">
+                <div class="p-3 border border-dark"><a href="Tour_Subpages/charleston.html"><h5>Charleston</h5></a> <br> 
+                  Come join as Stage Fright performs their latest album Gone But Not Forgotton.</div>
+            </div>
+          </div>       
         </div>
 
         <script src="../js/bootstrap.bundle.js"></script>
