Fixed Navbar and changed CoI to PF

--- a/pages/Store_Subpages/all.html
+++ b/pages/Store_Subpages/all.html
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../music.html">Music</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../tour.html">Tour</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
                               Store
@@ -41,11 +44,8 @@
                                   Collections
                                 </a>
                                 <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="Collections_Pages/col1.html">Venomous Predator</a></li>
                                   <li><a class="dropdown-item" href="Collections_Pages/col2.html">On a Ledge</a></li>
-                                  <li><a class="dropdown-item" href="Collections_Pages/col3.html">Locked Away</a></li>
-                                  <li><a class="dropdown-item" href="Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                                  <li><a class="dropdown-item" href="Collections_Pages/col5.html">Devoid of Light</a></li>
+                                  <li><a class="dropdown-item" href="Collections_Pages/col4.html">Painted Face</a></li>
                                   <li><a class="dropdown-item" href="Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                                 </ul>
                               </li>
@@ -66,9 +66,6 @@
                                 <a class="nav-link active" href="#">All</a>
                               </li>
                             </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../tour.html">Tour</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="../checkout.html">
@@ -414,43 +411,6 @@
         </div>
 
         <br>
-        <h1>VP Collection:</h1>
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">VP Top</h5>
-                    <p class="card-text">With a green Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">VP Hats</h5>
-                    <p class="card-text">With a green Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">VP Album</h5>
-                    <p class="card-text">Listen to songs such as Serpentine, Poison, and more</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
         <h1>OaL Collection:</h1>
         <div class="row">
             <div class="col-md">
@@ -488,44 +448,7 @@
         </div>
 
         <br>
-        <h1>LA Collection:</h1>
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">LA Top</h5>
-                    <p class="card-text">With a gold Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">LA Hats</h5>
-                    <p class="card-text">With a gold Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">LA Album</h5>
-                    <p class="card-text">Listen to songs such as Stuck, Schizo, and more</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-        <h1>CoI Collection:</h1>
+        <h1>PF Collection:</h1>
         <div class="row">
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
@@ -555,43 +478,6 @@
                     <div class="card-body">
                     <h5 class="card-title">CoI Album</h5>
                     <p class="card-text">Listen to orange such as Laughter, Lion Tamer, and more</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <br>
-        <h1>DoL Collection:</h1>
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">DoL Top</h5>
-                    <p class="card-text">With a purple Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">DoL Hats</h5>
-                    <p class="card-text">With a purple Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">DoL Album</h5>
-                    <p class="card-text">Listen to songs such as No Sight, Am I Alone?, and more</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
