--- a/pages/Store_Subpages/Categories_Pages/albums.html
+++ b/pages/Store_Subpages/Categories_Pages/albums.html
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../../music.html">Music</a>
                         </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="../../tour.html">Tour</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
                               Store
@@ -41,11 +44,8 @@
                                   Collections
                                 </a>
                                 <ul class="dropdown-menu store-menu">
-                                  <li><a class="dropdown-item" href="../Collections_Pages/col1.html">Venomous Predator</a></li>
                                   <li><a class="dropdown-item" href="../Collections_Pages/col2.html">On a Ledge</a></li>
-                                  <li><a class="dropdown-item" href="../Collections_Pages/col3.html">Locked Away</a></li>
-                                  <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                                  <li><a class="dropdown-item" href="../Collections_Pages/col5.html">Devoid of Light</a></li>
+                                  <li><a class="dropdown-item" href="../Collections_Pages/col4.html">Painted Face</a></li>
                                   <li><a class="dropdown-item" href="../Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                                 </ul>
                               </li>
@@ -68,9 +68,6 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../../tour.html">Tour</a>
-                        </li>
-                        <li class="nav-item">
                           <a class="nav-link" href="../../checkout.html">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
@@ -87,13 +84,14 @@
         </div>
 
         <div class="row">
+
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Venomous Predator</h5>
-                    <p class="card-text">An album focusing on serpentine creatures and their venom</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <h5 class="card-title">On a Ledge</h5>
+                        <p class="card-text">An album focusing on being on the brink of falling</p>
+                        <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
@@ -102,60 +100,23 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">On a Ledge</h5>
-                    <p class="card-text">An album focusing on being on the brink of falling</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <h5 class="card-title">Painted Face</h5>
+                        <p class="card-text">An album focusing on clowns and facades</p>
+                        <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Locked Away</h5>
-                    <p class="card-text">An album focusing on being trapped and cramped</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                        <div class="card-body">
+                            <h5 class="card-title">Gone but Not Forgotten</h5>
+                            <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
+                            <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-
-
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Carnival of Insanity</h5>
-                    <p class="card-text">An album focusing on clowns and games</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Devoid of Light</h5>
-                    <p class="card-text">An album focusing on darkness and the unknown</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Gone but Not Forgotten</h5>
-                    <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <script src="../../../js/bootstrap.bundle.js"></script>
