--- a/pages/store.html
+++ b/pages/store.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="music.html">Music</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="tour.html">Tour</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link active dropdown-toggle" aria-current="page" href="#" role="button" data-bs-toggle="dropdown" data-bs-auto-close="false" aria-expanded="false">
                           Store
@@ -43,11 +46,8 @@
                               Collections
                             </a>
                             <ul class="dropdown-menu store-menu">
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
                               <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Carnival of Insanity</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Painted Face</a></li>
                               <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                             </ul>
                           </li>
@@ -68,9 +68,6 @@
                             <a class="nav-link" href="Store_Subpages/all.html">All</a>
                           </li>
                         </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="tour.html">Tour</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="checkout.html">
