Fixed GBnF's Navbar Issue

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <ul class="dropdown-menu store-menu">
                                   <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
                                   <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col4.html">Painted Face</a></li>
-                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                                  <li><a class="dropdown-item" href="pages/Store_Subpages/Collections_Pages/col6.html">Gone But Not<br>Forgotten</a></li>
                                 </ul>
                               </li>
                               <li class="sub-menu">
