--- a/pages/store.html
+++ b/pages/store.html
@@ -48,7 +48,7 @@
                             <ul class="dropdown-menu store-menu">
                               <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
                               <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Painted Face</a></li>
-                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                              <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not<br>Forgotten</a></li>
                             </ul>
                           </li>
                           <li class="sub-menu">
