--- a/pages/Store_Subpages/Collections_Pages/col2.html
+++ b/pages/Store_Subpages/Collections_Pages/col2.html
@@ -46,7 +46,7 @@
                             <ul class="dropdown-menu store-menu">
                               <li><a class="dropdown-item active" href="#">On a Ledge</a></li>
                               <li><a class="dropdown-item" href="col4.html">Painted Face</a></li>
-                              <li><a class="dropdown-item" href="col6.html">Gone But Not Forgotten</a></li>
+                              <li><a class="dropdown-item" href="col6.html">Gone But Not<br>Forgotten</a></li>
                             </ul>
                           </li>
                           <li class="sub-menu">
@@ -89,7 +89,7 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">OaL Top</h5>
-                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                     <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">OaL Hats</h5>
-                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
