--- a/pages/Store_Subpages/all.html
+++ b/pages/Store_Subpages/all.html
@@ -46,7 +46,7 @@
                                 <ul class="dropdown-menu store-menu">
                                   <li><a class="dropdown-item" href="Collections_Pages/col2.html">On a Ledge</a></li>
                                   <li><a class="dropdown-item" href="Collections_Pages/col4.html">Painted Face</a></li>
-                                  <li><a class="dropdown-item" href="Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
+                                  <li><a class="dropdown-item" href="Collections_Pages/col6.html">Gone But Not<br>Forgotten</a></li>
                                 </ul>
                               </li>
                               <li class="sub-menu">
@@ -269,73 +269,39 @@
         <br>
         <h1>Albums:</h1>
         <div class="row">
+
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">Venomous Predator</h5>
-                    <p class="card-text">An album focusing on serpentine creatures and their venom</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <h5 class="card-title">On a Ledge</h5>
+                        <p class="card-text">An album focusing on being on the brink of falling</p>
+                        <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                    <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">On a Ledge</h5>
-                    <p class="card-text">An album focusing on being on the brink of falling</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <h5 class="card-title">Painted Face</h5>
+                        <p class="card-text">An album focusing on clowns and facades</p>
+                        <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md">
                 <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Locked Away</h5>
-                    <p class="card-text">An album focusing on being trapped and cramped</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        <img src="../../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
+                        <div class="card-body">
+                            <h5 class="card-title">Gone but Not Forgotten</h5>
+                            <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
+                            <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Carnival of Insanity</h5>
-                    <p class="card-text">An album focusing on clowns and games</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Devoid of Light</h5>
-                    <p class="card-text">An album focusing on darkness and the unknown</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
-    
-            <div class="col-md">
-                <div class="card mx-auto" style="width: 50%;">
-                    <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
-                    <div class="card-body">
-                    <h5 class="card-title">Gone but Not Forgotten</h5>
-                    <p class="card-text">Listen to our latest album, lead by the hit song Drowning</p>
-                    <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <br>
@@ -418,7 +384,7 @@
                     <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">OaL Top</h5>
-                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
@@ -429,7 +395,7 @@
                     <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
                     <h5 class="card-title">OaL Hats</h5>
-                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <p class="card-text">With a red Stage Fright logo, everyone will know you love the On a Ledge album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
@@ -454,8 +420,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">CoI Top</h5>
-                    <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <h5 class="card-title">PF Top</h5>
+                    <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Painted Face album</p>
                     <a href="#" class="btn btn-primary">$15.00 | Take a look</a>
                     </div>
                 </div>
@@ -465,8 +431,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">CoI Hats</h5>
-                    <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Gone But not Forgotten album</p>
+                    <h5 class="card-title">PF Hats</h5>
+                    <p class="card-text">With a orange Stage Fright logo, everyone will know you love the Painted Face album</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
@@ -476,8 +442,8 @@
                 <div class="card mx-auto" style="width: 50%;">
                     <img src="../../images/blank-1886013_640.png" class="card-img-top" alt="..." width="100" height="250">
                     <div class="card-body">
-                    <h5 class="card-title">CoI Album</h5>
-                    <p class="card-text">Listen to orange such as Laughter, Lion Tamer, and more</p>
+                    <h5 class="card-title">PF Album</h5>
+                    <p class="card-text">Listen to orange such as Laughter, Fake, and more</p>
                     <a href="#" class="btn btn-primary">$10.00 | Take a look</a>
                     </div>
                 </div>
