fixed navbar having 6 albums and added descriptions

--- a/pages/music.html
+++ b/pages/music.html
@@ -44,11 +44,8 @@
                             Collections
                           </a>
                           <ul class="dropdown-menu store-menu">
-                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col1.html">Venomous Predator</a></li>
                             <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col2.html">On a Ledge</a></li>
-                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col3.html">Locked Away</a></li>
                             <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col4.html">Painted Face</a></li>
-                            <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col5.html">Devoid of Light</a></li>
                             <li><a class="dropdown-item" href="Store_Subpages/Collections_Pages/col6.html">Gone But Not Forgotten</a></li>
                           </ul>
                         </li>
@@ -97,7 +94,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title"><strong>Gone But Not Forgotten</strong></h5>
-                  <p class="card-text">Here is our most recent album!</p>
+                  <p class="card-text">Come and listen to our long awaited album, Gone But Not Forgotten!</p>
                 </div>
               </div>
             </div>
